# Glowfire

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api-demo.cpp  api-demo_centroid.csv  classifier.h  classifier_base.h  cluster_generator.py  glassfire.cpp  glassfire.h  glassfire_base.h  glassfire_centroid.h  glassfire_cluster_model.h  glassfire_copier.h  glassfire_scorer.h  glassfire_util.h  plot_scatter.py  rand.mc  setup.py  test_classifier.cpp  web2local.py
data/: api-demo_centroid.csv
include/: lgm.h
src/: glassfire.h  glassfire_base.h  glassfire_cluster_model.h  glassfire_copier.h  glassfire_util.h
src/cpp/: lgm_base.h  lgm_classifier.h  lgm_factory.h
src/include/: lgm.h
src/lgmbin/: api-demo.cpp  lgm_main.cpp  perf-test.cpp
src/py/: cluster_generator.py  plot_scatter.py
